# N42-rs

./: Cargo.toml
crates/chainspec/res/genesis/: n42.json
crates/n42/engine-types/src/: job.rs  job_generator.rs  lib.rs  minedblock.rs  payload.rs
crates/n42/minedblock/: Cargo.toml
crates/n42/minedblock/src/: lib.rs  main.txt  minedblock.rs  unverifiedblock.rs
crates/primitives-traits/src/header/: sealed.rs
crates/revm/: Cargo.toml
crates/revm/src/: cached.rs
lytest/: ins.txt
