[package]
name = "minedblock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# clap.workspace = true
jsonrpsee.workspace = true
alloy-primitives.workspace = true
reth-revm.workspace = true
serde.workspace = true
n42-engine-types.workspace = true

[lints]
workspace = true
